# imgconvert

./: .gitignore  .prettierignore  .prettierrc.json  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  THIRD_PARTY_LICENSES.md  eslint.config.js  index.html  knip.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  macos-smoke.yml  release-linux.yml  release-updater.yml  updater-upgrade-smoke.yml  windows-smoke.yml
corpus/real/: README.md
crates/imgconvert-core/: Cargo.toml
crates/imgconvert-core/examples/: generate_fuzz_corpus.rs  replay_fuzz_corpus.rs
crates/imgconvert-core/src/: lib.rs
crates/imgconvert-core/tests/: image_quality.rs
docs/: CI_COSTS.md  DEVLOG.md  ENGINE.md  FUZZING.md  LEGAL.md  REFERENCES.md  ROADMAP.md  UPDATER.md
e2e/: app.spec.ts
fuzz/: Cargo.toml  README.md
fuzz/corpus/: README.md
fuzz/fuzz_targets/: convert_pipeline.rs  decode_pipeline.rs  metadata_semantics.rs
public/: THIRD_PARTY_LICENSES.md
scripts/: audit-rust-advisories.mjs  benchmark-macos-avif.mjs  benchmark-platform.mjs  check-architecture-guardrails.mjs  check-ci-cost-guardrails.mjs  check-flathub-metadata.mjs  check-flatpak-heic-extension.mjs  check-flatpak-manifest.mjs  check-image-quality.mjs  check-linux-bundle-artifacts.mjs  check-macos-bundle-artifacts.mjs  check-native-toolchain.mjs  check-npm-licenses.mjs  check-platform-release-guardrails.mjs  check-readme-status.mjs  check-tauri-updater-manifest.mjs  check-windows-bundle-artifacts.mjs  clean-linux-bundles.mjs  clean-macos-bundles.mjs  clean-windows-bundles.mjs  generate-linux-release-checksums.mjs  generate-tauri-updater-manifest.mjs  generate-third-party-licenses.mjs  minimize-fuzz-artifacts.mjs  notarize-macos-dmg.mjs  package-macos-mas-pkg.mjs  prepare-flathub-pr.mjs  prepare-flatpak-release.mjs  prepare-fuzz-corpus.mjs  prepare-macos-mas-release.mjs  prepare-tauri-updater-release.mjs  prepare-windows-msix-release.mjs  release-linux-updater.mjs  replay-fuzz-corpus.mjs  report-release-readiness.mjs  scrub-linux-appimage.mjs  sign-tauri-updater-artifacts.mjs  sign-windows-installers.mjs  smoke-flatpak-heic-extension.mjs  smoke-flatpak-heic-runtime.mjs  (+9 more)
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  Info.macos.mas.plist  about.hbs  about.toml  build.rs  deny.toml  entitlements.macos.direct.plist  entitlements.macos.mas.plist  rust-toolchain.toml  tauri.conf.json  tauri.macos.conf.json  tauri.macos.mas.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: access.rs  convert.rs  external_codecs.rs  import.rs  lib.rs  macos_security.rs  macos_system_codecs.rs  main.rs  native_dialog.rs  thumbnail.rs  windows_system_codecs.rs
tests/: state.test.ts
(+45 files in other folders)
